Added troubleshooting section to README.md